Changelog
=========

1.0b15 (unreleased)
-------------------

* Added touch support

1.0b14 (2013-04-29)
-------------------

* Added new configuration option (responsive) to make it possible to use
  the lightbox in a container having a flexible width

1.0b13 (2011-07-21)
-------------------

* Fixed lightbox initilization (jQuery attribute selector did no longer work)
* Fixed lightbox if showLoading was set to true (hide previous image while loading the next one)

1.0b12 (2011-07-20)
-------------------

* Fixed flickering between image changes if loading is not displayed
* Fixed bugs in IE 6-8

1.0b11 (2011-07-19)
-------------------

* Fixed bug in IE (6-9) where the links defined by the linkSelector property where not accessible

1.0b10 (2011-06-07)
-------------------

* Added new settings to define vertical and horizontal alignment for the image if using fixedHeight and/or fixedWidth
* Added new settings to specify the link attribute

1.0b9 (2011-05-09)
------------------

* Center the image in fixedWidth and/or fixedHeight lightboxes also if only one is available

1.0b8 (2011-05-09)
------------------

* Fixed bug in FF 4.0 (image size calculation was wrong because the image was not loaded completely)

1.0b7 (2010-12-08)
------------------

* IE fixes for auto fading

1.0b6 (2010-12-08)
------------------

* Added possibility to set starting image for auto starting lightboxes

1.0b5 (2010-12-3)
------------------

* Add new property to specified a element for binding the linkSelector

1.0b4 (2010-11-29)
------------------

* Removed jQuery.proxy usage to preserve plone 3 compatibility

1.0b3 (2010-11-10)
------------------

* CSS and JavaScript Bugfixes for Internet Explorer
* Added callback functionality
* Fixed fade effect (previous image is now fading out while the current one is fading in)

1.0b2 (2010-10-20)
------------------

* First public release